# 2d-heat-eq-cuda

./: CMakeLists.txt
src/: main.cu  vec4_math.cuh
